--- a/SSLeay/Changes
+++ b/SSLeay/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl extension SSLeay.
+Revision history for Perl extension Net::SSLeay.
 
 0.01  Thu Jun 27 03:56:00 1996
 	- original version; created by h2xs 1.16
@@ -6,4 +6,11 @@ Revision history for Perl extension SSLeay.
 0.03  Renamed everything Net::SSLeay
 0.04  19.7.1996 Fixed some 0.6.1 incompatibilities, namely removed
       #include <ssl_locl.h>, fixed typo in SSL_get_cerificate, fixed
-      the return type of the same.
+      the return type of the same. --Sampo
+1.00  19.6.1998, Sampo Kellomaki <sampo@iki.fi>
+	- overhauled to SSLeay-0.9.0
+	- renamed cat to sslcat
+	- added lots of convenience functions, like get_https
+	- added couple of X509 routeines
+	- improved tests and documentation
+	- fixed callbacks (but found that old callbacks dont work)
