--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 README - Net::SSLeay Perl module for using OpenSSL
 
-18.7.2001, Sampo Kellomaki <sampo@iki.fi>
-Version: 1.08
+25.9.2001, Sampo Kellomaki <sampo@iki.fi>
+Version: 1.09
 
+1.09: added many utlility functions of OpenSSL API, better old perl support
 1.08: 64 bit fixes, windows fixes, fixed extra newline with auth bug
 1.07: added rudimentary TLSv1 support by Stephen C. Koehler
 1.06: fixed ssl_read_all() bug where input '0' would cause loop to exit
@@ -18,11 +19,11 @@ By popular demand...
 Prerequisites
 -------------
 
-perl5.005 or perl-5.6.0
+perl-5.6.0
                 though anything starting from perl5.002 probably works.
-OpenSSL-0.9.3a or OpenSSL-0.9.6a
+OpenSSL-0.9.6b
                 (try http://www.openssl.org/) - nothing
-                earlier works. This release has been tested with 0.9.6a and
+                earlier works. This release has been tested with 0.9.6b and
 		in historical light it seems likely that future versions
 	  	will work as well (if major version number changes all bets
 		are off, though)
@@ -42,9 +43,10 @@ Unix:
 
 	gunzip <Net_SSLeay.pm-1.06.tar.gz | tar xvf -
 	cd Net_SSLeay.pm-1.06
-	./Makefile.PL -t     # builds and tests it (3 compile warnings)
+	./Makefile.PL -t     # builds and tests it
 	make install         # You probably have to su to root to do this
 	perldoc Net::SSLeay  # optional, but highly recommended
+	perldoc Net::SSLeay::Handle
 
 Windows:
 	You need to get MS VC++ 6.0 Enterprise Edition. Nobody has
@@ -79,18 +81,22 @@ Windows:
 
 You should also be able to use CPAN.pm to install this module if you like.
 
-For linking against RSAref add -rsaref flag like this:
+Linking with RSAref is no longer supported (the patent issue is moot
+doe to patent expiring). If you want to try it, you are on your own,
+but here's how it used to work...
+
+  For linking against RSAref add -rsaref flag like this:
 
 	./Makefile.PL -rsaref -t  # builds and tests it, link against RSAref
 
-You must previously have built OpenSSL with RSAref support (which
-implies first building rsaref itself), I use the RSAglue method. File
-librsaref.a must be found in one of the locations searched by linker
-(-L switches). Usually this means that you have to rename rsaref.a to
-librsaref.a and copy it to suitable directory, e.g. /usr/local/ssl/lib.
+  You must previously have built OpenSSL with RSAref support (which
+  implies first building rsaref itself), I use the RSAglue method. File
+  librsaref.a must be found in one of the locations searched by linker
+  (-L switches). Usually this means that you have to rename rsaref.a to
+  librsaref.a and copy it to suitable directory, e.g. /usr/local/ssl/lib.
 
-N.B. AFAIK the patent that made using RSAref necessary has expired, so this
-should be nonissue by now.
+  N.B. AFAIK the patent that made using RSAref necessary has expired, so
+  this should be nonissue by now.
 
 Problems (read this before sending mail)
 ----------------------------------------
@@ -118,7 +124,7 @@ If you send me a question or make a bug report, please remeber to mention
   - On Linux, please report glibc version as well
   - Net::SSLeay version
   - OpenSSL version (`/usr/local/ssl/bin/openssl version')
-  - ANSI C compiler make and version (gcc -v)
+  - ANSI C compiler brand and version (gcc -v)
 
 If build fails,
   - three compiler warnings are known to be emitted (due to lack of const
@@ -158,7 +164,7 @@ If you have problems with a site, please
 HP-UX is known to give some problems, please mail me or the mailing
 list so we can get these problems straightened. Hint: it has to do
 with dynamic loading. One user reports that adding `-lgcc' to EXTRALIBS
-and LD_LOAD_LIBS in Makefile fixes the problem. We have not received any
+and LD_LOAD_LIBS in Makefile fixes the problem. I have not received any
 confirmation whether this fix really works, but its worth a try. Another
 bag of problems is people installing against binary distributed
 perl and compiling the package with different cc or different options.
@@ -281,7 +287,7 @@ consulting the HTTP specification. HTTPS is just HTTP in SSL transport.
 
 If you are doing advanced stuff, and don't find documentation you need,
 please try to extrapolate from OpenSSL documentation (which unfortunately
-is quite sparse) and source code.
+is quite sparse) and the source code.
 
 If you run into build problems, especially regarding shared libraries,
 check your perl documentation, especially the perlxtut(1) man page,
